--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "v-tooltip": "^2.0.0-rc.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
