--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap-vue": "^1.0.0-beta.9",
     "v-tooltip": "^2.0.0-rc.8",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-youtube-embed": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
